@@ -19,6 +19,7 @@ export(filter_motifs)
 export(get_bkg)
 export(get_consensus)
 export(get_consensusAA)
+export(get_klets)
 export(icm_to_ppm)
 export(make_DBscores)
 export(merge_motifs)
