@@ -1,8 +1,8 @@
 # Generated by using Rcpp::compileAttributes() -> do not edit by hand
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
-single_to_k <- function(seq, k) {
-    .Call('_universalmotif_single_to_k', PACKAGE = 'universalmotif', seq, k)
+single_to_k <- function(seq1, k) {
+    .Call('_universalmotif_single_to_k', PACKAGE = 'universalmotif', seq1, k)
 }
 
 peakfinder_cpp <- function(x, m = 3L) {
@@ -131,6 +131,12 @@ collapse_rows_mat <- function(seqs_k) {
 
 collapse_rows_df <- function(seqs_k) {
     .Call('_universalmotif_collapse_rows_df', PACKAGE = 'universalmotif', seqs_k)
+}
+
+#' @rdname utilities
+#' @export
+get_klets <- function(lets, k) {
+    .Call('_universalmotif_get_klets', PACKAGE = 'universalmotif', lets, k)
 }
 
 collapse_cpp <- function(x) {
