@@ -1,6 +1,7 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/compare_motifs.R, R/utils.R
-\name{make_DBscores}
+% Please edit documentation in R/RcppExports.R, R/compare_motifs.R, R/utils.R
+\name{get_klets}
+\alias{get_klets}
 \alias{make_DBscores}
 \alias{utilities}
 \alias{ppm_to_icm}
@@ -17,6 +18,8 @@
 \alias{summarise_motifs}
 \title{Utility functions.}
 \usage{
+get_klets(lets, k)
+
 make_DBscores(db.motifs, method, shuffle.db = TRUE, shuffle.k = 3,
   shuffle.method = "linear", shuffle.leftovers = "asis",
   rand.tries = 1000, normalise.scores = TRUE, min.overlap = 6,
@@ -51,6 +54,10 @@ get_consensusAA(position, type, pseudocount)
 summarise_motifs(motifs, na.rm = TRUE)
 }
 \arguments{
+\item{lets}{\code{character} Letters to generate k-lets from.}
+
+\item{k}{\code{integer(1)} K-let size.}
+
 \item{db.motifs}{\code{list} Database motifs.}
 
 \item{method}{\code{character(1)} One of \code{c('PCC', 'MPCC', 'EUCL', 'MEUCL', 'SW', 'MSW', 'KL', 'MKL')}. See \code{\link[=compare_motifs]{compare_motifs()}}.}
@@ -208,6 +215,10 @@ m1 <- create_motif()
 m2 <- create_motif()
 m3 <- create_motif()
 summarise_motifs(list(m1, m2, m3))
+
+## get_klets
+## Generate all possible k-lets for a set of letters
+get_klets(c("A", "C", "G", "T"), 3)
 
 }
 \seealso{
